--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.0",
     "eslint-plugin-react": "^6.10.3",
     "graphql": "^0.9.5",
+    "grommet": "^1.4.0",
     "material-ui": "^0.18.0",
     "next": "^2.3.0-alpha1",
     "react": "^15.5.4",
